--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,10 +2,7 @@
 develop = .
 parts =
     app
-    mkdirs
-    deploy_ini
     deploy_cfg
-    debug_ini
     debug_cfg
     test
 newest = false
@@ -18,42 +15,10 @@ find-links =
 # (see .buildout/default.cfg in your home directory)
 # unless you specify an eggs-directory option here.
 
-[server]
-host = 127.0.0.1
-port = 5000
-logfiles = ${buildout:directory}/var/log
-
 [app]
 recipe = zc.recipe.egg
 eggs = cadorsfeed
-       Paste
-       PasteScript
-       PasteDeploy
-
 interpreter = python-console
-
-[mkdirs]
-recipe = z3c.recipe.mkdir
-paths =
-    ${server:logfiles}
-
-[deploy_ini]
-recipe = collective.recipe.template
-input = etc/deploy.ini.in
-output = ${buildout:parts-directory}/etc/${:outfile}
-outfile = deploy.ini
-app = cadorsfeed
-workers = 10
-spawn_if_under = 5
-max_requests = 100
-
-[debug_ini]
-<= deploy_ini
-outfile = debug.ini
-app = cadorsfeed#debug
-workers = 1
-spawn_if_under = 1
-max_requests = 0
 
 [deploy_cfg]
 recipe = collective.recipe.template
@@ -62,6 +27,9 @@ input = inline:
     DEBUG = False
     SECRET_KEY = 'production key'
     USERNAME = 'Fernand'
+    REDIS_HOST = 'localhost'
+    REDIS_PORT = 6379
+    REDIS_DB = 0
 output = ${buildout:parts-directory}/etc/deploy.cfg
 
 [debug_cfg]
@@ -71,6 +39,9 @@ input = inline:
     DEBUG = True
     SECRET_KEY = 'development key'
     USERNAME = 'Raoul'
+    REDIS_HOST = 'localhost'
+    REDIS_PORT = 6379
+    REDIS_DB = 0
 output = ${buildout:parts-directory}/etc/debug.cfg
 
 [test]
