Infrastructure for PostGIS backend.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,9 +2,9 @@
 develop = .
 parts =
     app
-    deploy_cfg
+#    deploy_cfg
     debug_cfg
-    test
+#    test
 newest = false
 unzip = true
 find-links = 
@@ -38,10 +38,9 @@ input = inline:
     # Debugging configuration
     DEBUG = True
     SECRET_KEY = 'development key'
-    USERNAME = 'Raoul'
-    REDIS_HOST = 'localhost'
-    REDIS_PORT = 6379
-    REDIS_DB = 0
+    SQLALCHEMY_DATABASE_URI = 'postgresql://cadorsdb:cadorsdb@localhost/cadorsdb'
+    SQLALCHEMY_ECHO = True
+    SQLALCHEMY_NATIVE_UNICODE = False
 output = ${buildout:parts-directory}/etc/debug.cfg
 
 [test]
