Clean up the config file malarkey, parameterize the Google Maps key.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,14 +2,13 @@
 develop = .
 parts =
     app
-#    deploy_cfg
+    gunicorn
+    deploy_cfg
     debug_cfg
-#    test
 newest = false
 unzip = true
 find-links = 
-    http://github.com/kurtraschke/geolucidate/zipball/master#egg=geolucidate
-    http://github.com/kurtraschke/pyRFC3339/zipball/master#egg=pyRFC3339
+    http://github.com/mitsuhiko/flask-sqlalchemy/zipball/master#egg=Flask-SQLAlchemy-0.12
 
 # eggs will be installed in the default buildout location
 # (see .buildout/default.cfg in your home directory)
@@ -17,33 +16,25 @@ find-links =
 
 [app]
 recipe = zc.recipe.egg
-eggs = cadorsfeed
+eggs = cadorsfeed 
 interpreter = python-console
+
+[gunicorn]
+recipe = zc.recipe.egg:scripts
+eggs =
+       cadorsfeed
+       gunicorn
+       setproctitle
 
 [deploy_cfg]
 recipe = collective.recipe.template
-input = inline:
-    # Deployment configuration
-    DEBUG = False
-    SECRET_KEY = 'production key'
-    USERNAME = 'Fernand'
-    REDIS_HOST = 'localhost'
-    REDIS_PORT = 6379
-    REDIS_DB = 0
-output = ${buildout:parts-directory}/etc/deploy.cfg
+input = ${buildout:directory}/etc/config.in
+output = ${buildout:directory}/etc/deploy.cfg
+debug = False
+proxy_fix = True
 
 [debug_cfg]
-recipe = collective.recipe.template
-input = inline:
-    # Debugging configuration
-    DEBUG = True
-    SECRET_KEY = 'development key'
-    SQLALCHEMY_DATABASE_URI = 'postgresql://cadorsdb:cadorsdb@localhost/cadorsdb'
-    SQLALCHEMY_ECHO = True
-    SQLALCHEMY_NATIVE_UNICODE = False
-output = ${buildout:parts-directory}/etc/debug.cfg
-
-[test]
-recipe = pbp.recipe.noserunner
-eggs = cadorsfeed
-defaults = -v
+<= deploy_cfg
+output = ${buildout:directory}/etc/debug.cfg
+debug = True
+proxy_fix = False
