--- a/base.cfg
+++ b/base.cfg
@@ -3,8 +3,8 @@ develop = .
 parts =
     app
     gunicorn
-    deploy_cfg
-    debug_cfg
+    flask_cfg
+    gunicorn_cfg
 newest = false
 unzip = true
 find-links = 
@@ -16,7 +16,7 @@ find-links =
 
 [app]
 recipe = zc.recipe.egg
-eggs = cadorsfeed 
+eggs = cadorsfeed
 interpreter = python-console
 
 [gunicorn]
@@ -26,15 +26,12 @@ eggs =
        gunicorn
        setproctitle
 
-[deploy_cfg]
+[flask_cfg]
 recipe = collective.recipe.template
-input = ${buildout:directory}/etc/config.in
-output = ${buildout:directory}/etc/deploy.cfg
-debug = False
-proxy_fix = True
+input = ${buildout:directory}/etc/flask.cfg.in
+output = ${buildout:directory}/etc/flask.cfg
 
-[debug_cfg]
-<= deploy_cfg
-output = ${buildout:directory}/etc/debug.cfg
-debug = True
-proxy_fix = False
+[gunicorn_cfg]
+recipe = collective.recipe.template
+input = ${buildout:directory}/etc/gunicorn.cfg.in
+output = ${buildout:directory}/etc/gunicorn.cfg
